--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jasmine --config=src/spec/support/jasmine.json",
     "build": "rm -rf umd && webpack-cli",
-    "prepublish": "npm test && npm run build"
+    "prepublish": "npm test && npm run build",
+    "browserify": "browserify src/index.js --standalone index > browser.js"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,8 @@
     "jasmine": "^3.6.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "browserify": "^17.0.0"
   }
 }
